[package]
name = "libretuner"
version = "0.1.0"
authors = ["Altenius <jacobjm18@gmail.com>"]
edition = "2018"

[features]
default = ["cli", "socketcan"]
cli = ["rustyline", "clap", "directories", "conrod", "find_folder", "shlex"]
socketcan = []

[dependencies]
tuneutils = {path = "../tuneutils", features = ["socketcan"]}

rustyline = {version = "2.1.0", optional = true}
clap = {version = "~2.27.0", optional = true}
directories = {version = "1.0", optional = true}
conrod = { version = "0.61.1", optional = true, features = ["glium", "winit"] }
find_folder = {version = "0.3.0", optional = true}
shlex = {version = "0.1.1", optional = true}