[package]
name = "libretuner"
version = "0.1.0"
authors = ["Altenius <jacobjm18@gmail.com>"]
edition = "2018"

[features]
default = ["cli"]
cli = ["rustyline", "clap", "directories", "find_folder", "shlex"]
socketcan = []

[dependencies]
tuneutils = {git = "https://github.com/LibreTuner/tuneutils.git"}

rustyline = {version = "2.1.0", optional = true}
clap = {version = "~2.27.0", optional = true}
directories = {version = "1.0", optional = true}
find_folder = {version = "0.3.0", optional = true}
shlex = {version = "0.1.1", optional = true}